@startuml

class PL{
    - valMax : int
    + PL(int valMax, List(Param) params)
    + getVariableReelle() : Param
    + enleverParametre(Param param, float value)
    + reset()
    + evaluateZ()
    + coutZ()
    + affiche_heuristique1()
    + affiche_heuristique2()
    + affiche_heuristique3()
    + evaluateZ_Heurestique1()
    + evaluateZ_Heurestique2()
    + evaluateZ_Heurestique3()
}

class Param{
    - nom : String
    - duree : int
    - cout : int
    + Param ( String nom, int duree, int cout)
}
 
class BranchAndBound{
    + {static} nbnoeuds = 0
    + evaluer()
}

class Solution{
    - solution(PL pl)
    + evaluer()
}

PL  --> "*" Param : - parametres
PL --> "*" Param : - buffer

BranchAndBound --> "1" PL : - pbactuel
BranchAndBound --> "1" PL : - borneSup

Solution --> "1" PL : - probleme

@enduml